--- a/positionstyles.css
+++ b/positionstyles.css
@@ -33,7 +33,7 @@
 .content2 {
   /* This is the parent of the activity 2 boxes. */
   display: grid;
-  grid-template-columns: repeat(5, fr);
+  grid-template-columns: repeat(5, 50px);
 }
 .red2 {
   width: 100px; 
@@ -68,8 +68,7 @@
   /* This is the parent of the activity 3 boxes. */
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-column-gap: 20px
-
+  grid-column-gap: 50px
 }
 .red3 {
   width: 100%; 
@@ -78,19 +77,18 @@
   grid-column: 1/3;
 } 
 .green3 {
-  width: 200px; 
+  width: 100%; 
   height: 100px; 
   background-color: green;
   grid-column: 1/2;
   justify-self: start;
 } 
 .yellow3 {
-  width: 200px; 
+  width: 100%; 
   height: 100px; 
   background-color: gold; 
   grid-column: 2/3;
   justify-self: end;
-
 } 
 .blue3 {
   width: 100%;
@@ -139,22 +137,23 @@
   background-color: red; 
 } 
 .green5 { 
-  width: 200px; 
-  height: 200px; 
-  background-color: green; 
+  width: 30%;
+  height: 150px;
+  background-color: green;
   float: left;
 
 } 
 .yellow5 {
   width: 100%; 
-  height:min-content;
-  background-color: gold; 
+  height: min-content;
+  background-color: gold;
+  font-size: 14px;
 
 } 
 .blue5 {
   width: 100%; 
   height: 100px; 
-  background-color: blue; 
+  background-color: blue;
 } 
 /* Activity 6 styles */ 
 .content6 {
@@ -164,7 +163,7 @@
   
 }
 .red6 {
-  width: 400px; 
+  width: 100%; 
   height: 200px; 
   background-color: red; 
   grid-column: 1/5;
@@ -172,21 +171,21 @@
   z-index: -1;
 } 
 .green6 {
-  width: 200px; 
+  width: 100%; 
   height: 200px; 
   background-color: green;
   grid-column: 1/3;
   grid-row: 5/7;
 } 
 .yellow6 {
-  width: 200px; 
+  width: 100%; 
   height: 400px; 
   background-color: gold; 
   grid-column: 5/7;
   grid-row: 3/7
 } 
 .blue6 {
-  width: 400px; 
+  width: 100%; 
   height: 400px; 
   background-color: blue;
   grid-column: 2/6;
