--- a/positionstyles.css
+++ b/positionstyles.css
@@ -137,8 +137,8 @@
   background-color: red; 
 } 
 .green5 { 
-  width: 30%;
-  height: 150px;
+  width: 100px;
+  height: 100px;
   background-color: green;
   float: left;
 
