--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -6,25 +6,25 @@ Fonts are separated by a & */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #F8961E   ;
-  --secondary-color: #277DA1 ;
-  --accent1-color: #43AA8B;
-  --accent2-color: #F94144;
+  --primary-color: #43AA8B   ;
+  --secondary-color: #D17B0F ;
+  --accent1-color: #E63462;
+  --accent2-color: #FFE66D;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Lora";
   --paragraph-font: Roboto Mono, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #F8961E;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #277DA1; /* paragraph text on a white background */ 
+  --headline-color-on-white: #E63462;  /* headlines on a white background */ 
+  --headline-color-on-color: #FFE66D; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #000000; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #277DA1  ;
+  --paragraph-background-color: #D17B0F  ;
   --nav-link-color: #FFFFFF;
   --nav-background-color: #43AA8B;
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: #277DA1;
+  --nav-hover-link-color: #FFFFFF;
+  --nav-hover-background-color: #E63462;
 }
 
 
