--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -1,15 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap');
 
 body {
-    background-color: #fcfbfb;
     font-family: "Roboto", "Arial", sans-serif;
     font-size: 22px;
     margin: 0;
     padding: 0;
 }
 
+h2 {
+    margin: 0;
+}
+
+h4 {
+    color: #ffe66d;
+}
+
 header {
-    background-color: #43AA8B;
+    background-color: rgba(67, 170, 139, 0.5);
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
 }
 
 nav a {
@@ -20,8 +34,13 @@ nav a {
 }
 
 nav a:hover {
-    background-color: #277DA1;
+    background-color: #e63462;
     color: white;
+}
+
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
 }
 
 main section {
@@ -32,19 +51,14 @@ main section img {
     box-sizing: border-box;
 }
 
-h2 {
-    margin: 0;
-}
-
-h4 {
-    color: #F8961E;
-}
-
 footer {
     background-color: #43AA8B;
     color: #000000;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 footer p {
@@ -88,12 +102,12 @@ footer .social img {
 }
 
 .book:hover, .join:hover {
-    background-color: #277DA1;
+    background-color: #e63462;
     color: white;
 }
 
 .home-title {
-    color: #F8961E;
+    color: #ffe66d;
     font-family: "Lora", "Georgia", serif;
     font-size: 2em;
     margin-top: 10px;
@@ -104,13 +118,16 @@ footer .social img {
 }
 
 .msg {
-    background-color: #277DA1;
+    background-color: #d17b0f;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #0E2C39;
 }
 
 .msg h2 {
-    color: #F8961E;
+    color: #ffe66d;
     font-family: "Lora", "Georgia", serif;
 }
 
@@ -124,8 +141,58 @@ footer .social img {
     margin: 200px 0;
 }
 
+.card-img, .mountains {
+    width: 100%;
+}
+
 .card-img {
     border: 10px solid #43AA8B;
+    transition: transform .5s;
+    box-shadow: 5px 4px 10px #0E241D;
+}
+
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+
+.mountains {
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #0E2C39;
+}
+
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
 }
 
 #hero-msg h1, #hero-msg h4{
@@ -143,9 +210,55 @@ footer .social img {
 
 #background {
     height: 725px;
-    background-color: #277DA1;
+    background-color: #d17b0f;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #e63462;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
