--- a/film/styles/site-plan.css
+++ b/film/styles/site-plan.css
@@ -1,7 +1,7 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Merriweather+Sans');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Merriweather');
 
 :root {
   /* change the values below to your colors from your palette */
@@ -11,8 +11,8 @@ Fonts are separated by a | */
   --accent2-color: #25291C;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "Playfair+Display";
-  --paragraph-font: "Merriweather+Sans", Helvetica, Sans;
+  --heading-font: "Playfair Display", serif;
+  --paragraph-font: "Merriweather", Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #25291C;  /* headlines on a white background */ 
